--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Frederik Gheysels
+name: Frederik Gheysels' WebLog
+
+title: Frederik Gheysels' WebLog
 
 # Short bio or description (displayed in the header)
+tagline: Blog on software development, C#, Azure, IoT ...
 description: Blog on software development, C#, Azure, IoT ...
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
@@ -31,6 +34,13 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
+social:
+  name: Frederik Gheysels
+  links:
+  - https://github.com/fgheysels
+  - https://www.linkedin.com/in/frederik-gheysels-4946153/
+  - https://stackoverflow.com/users/55774/frederik-gheysels
+
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -41,7 +51,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://fgheysels.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -74,6 +84,7 @@ sass:
 
 # Use the following plug-ins
 plugins:
+  - jekyll-seo-tag
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-gist
@@ -85,3 +96,4 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+  - _site/robots.txt
